# corobimy

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  bash.exe.stackdump  conftest.py  idea-notes.md  lefthook.yml  manage.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  railway.toml
.claude/: .10x-cli-manifest.json  settings.json  settings.local.json
.claude/commands/: exa-init.md
.claude/hooks/: post-edit-lint.ps1
.github/workflows/: ci.yml
accounts/: tests.py  urls.py  views.py
accounts/templates/accounts/: register.html
attractions/: admin.py  apps.py  filters.py  models.py  tests.py  urls.py  views.py
attractions/fixtures/: initial_attractions.json
attractions/migrations/: 0001_initial.py  0002_usersavedattraction.py
attractions/templates/attractions/: list.html
context/: architect-report.md
context/changes/attraction-browse-feed/: change.md  plan-brief.md  plan.md  research.md
context/changes/bootstrap-verification/: verification.md
context/changes/browse-first-save/: change.md  plan-brief.md  plan.md  research.md
context/changes/deployment/: deployment-plan.md
context/domain/: 01-domain-distillation.md  02-invariant-aggregate-refactor.md  03-anti-corruption-layer.md
context/foundation/: infrastructure.md  lessons.md  prd.md  roadmap.md  shape-notes.md  tech-stack.md  test-plan.md
corobimy/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
scripts/: ship.sh
templates/: base.html
templates/registration/: logged_out.html  login.html
tests/e2e/: save-across-auth-redirect.spec.ts  seed.spec.ts
(+22 files in other folders)
