[project]
name = "corobimy"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.0",
    "dj-database-url>=2.3.0",
    "whitenoise>=6.9.0",
    "django-filter>=25.2",
    "django-htmx>=1.27.0",
]

[dependency-groups]
dev = [
    "mutmut>=3.6.0",
    "mypy>=1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 119
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "corobimy.settings"

[tool.mutmut]
source_paths = ["attractions/views.py", "attractions/models.py"]
pytest_add_cli_args_test_selection = [
    "attractions/tests.py::SaveAuthGateTest",
    "attractions/tests.py::UserSaveIsolationTest",
    "attractions/tests.py::SaveAcrossAuthTest::test_login_path_save_persists",
]
